# SerialTransfer

./: CMakeLists.txt
_cmake/: pico_sdk.cmake  pico_vsc.cmake
_cmake/module/: Findpicotool.cmake
examples/: examples.cmake
examples/uart_rx_data/: uart_rx_data.cmake  uart_rx_data.cpp
examples/uart_rx_datum/: uart_rx_datum.cmake
examples/uart_rx_file/: uart_rx_file.cmake
examples/uart_rx_with_callbacks/: uart_rx_with_callbacks.cmake
examples/uart_tx_data/: uart_tx_data.cmake
examples/uart_tx_datum/: uart_tx_datum.cmake
examples/uart_tx_file/: uart_tx_file.cmake
include/: I2CTransfer.h  Packet.h  PacketCRC.h  SerialTransfer.h
src/: I2CTransfer.cpp  I2CTransfer.h  Packet.cpp  Packet.h  SPITransfer.cpp  SPITransfer.h  SerialTransfer.cpp  library.cmake
